--- a/week01/project/parser/templates/error/404.html
+++ b/week01/project/parser/templates/error/404.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Upload Example</title>
+    <title>404 Error</title>
     <style>
         body {
           margin: 0;
         }
-  
         .center {
           display: flex;
           justify-content: center;
@@ -19,11 +18,9 @@
       </style>
 </head>
 <body>
-    <div class="center">
-        <form method="POST" action="/" enctype="multipart/form-data">
-            <input type="file" name="file">
-            <button>Submit</button>
-        </form>
+    <div class="content-section">
+        <h1>Oops. Page Not Found (404)</h1>
+        <p>That page does not exist. Please try a different location</p>
     </div>
 </body>
 </html>
