fixed bugs and reporting

--- a/week01/project/parser/templates/report.html
+++ b/week01/project/parser/templates/report.html
@@ -20,8 +20,13 @@
 <body>
     <div style="padding:20px" >
         <h1>Upload Results</h1>
-        <p>XXX files processed and moved to archived.</p>
-        <p>XXX files failed and moved to error.</p>
+        <p>{{ file_name }} processed and moved to archived.</p>
+        <hr>
+        <h2>Summary Data</h2>
+        <p>{{ data1 }}</p>
+        <hr>
+        <h2>VOC Data</h2>
+        <p>{{ data2 }}</p>
     </div>
 </body>
 </html>
