--- a/week01/project/parser/templates/failure.html
+++ b/week01/project/parser/templates/failure.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Failure</title>
     <style>
         body {
           margin: 10px;
@@ -19,9 +19,9 @@
 </head>
 <body>
   <div style="padding:20px" >
-  <h1>Report Generator</h1>
+  <h1>ERROR</h1>
 
-  <p>Select a file to upload and process.</p>
+  <p>Your file did not process. Please try again.</p>
 
         <form method="POST" action="/" enctype="multipart/form-data">
             <input type="file" name="file">
