--- a/week01/project/parser/templates/error/422.html
+++ b/week01/project/parser/templates/error/422.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTTP 404 Not Found</title>
+    <title>HTTP 422 Unprocessable Entity</title>
     <style>
         body {
           margin: 0;
@@ -19,8 +19,9 @@
 </head>
 <body>
     <div class="content-section">
-        <h1>Oops. Page Not Found (404)</h1>
-        <p>That page does not exist. Please try a different location</p>
+        <h1>HTTP 422 Unprocessable Entity</h1>
+        <p>message</p>
+        <p>Please correct file and try again</p>
     </div>
 </body>
 </html>
