--- a/week01/project/parser/templates/error/422.html
+++ b/week01/project/parser/templates/error/422.html
@@ -7,7 +7,7 @@
     <title>HTTP 422 Unprocessable Entity</title>
     <style>
         body {
-          margin: 0;
+          margin: 10;
         }
         .center {
           display: flex;
@@ -20,8 +20,8 @@
 <body>
     <div class="content-section">
         <h1>HTTP 422 Unprocessable Entity</h1>
-        <p>message</p>
-        <p>Please correct file and try again</p>
+        <p>{{ message }}</p>
+        <p>Please try again</p>
     </div>
 </body>
 </html>
