--- a/week01/project/parser/templates/error/501.html
+++ b/week01/project/parser/templates/error/501.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTTP 404 Not Found</title>
+    <title>HTTP 501 Unsupported Method ('POST')</title>
     <style>
         body {
           margin: 10;
@@ -19,8 +19,8 @@
 </head>
 <body>
     <div class="content-section">
-        <h1>Oops. Page Not Found (404)</h1>
-        <p>Could not upload file. Please try a again.</p>
+        <h1>HTTP 501 Unsupported Method</h1>
+        <p>Server does not support this operation.</p>
     </div>
 </body>
 </html>
